--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="cancel">CANCEL</string>
     <string name="create_account">CREATE ACCOUNT</string>
     <string name="account_confirmation_msg">Thanks for creating an account!</string>
+    <string name="password_reset">Reset Password</string>
 
     <string name="continue_shopping">Continue Shopping</string>
 
