--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,8 @@
     <string name="signup_title">Sign Up</string>
     <string name="or">\u0020Or\u0020</string>
     <string name="question_mark">\?</string>
+    <string name="redeem">Your redeemable</string>
+    <string name="reward">Reward!</string>
 
     <string name="add">ADD</string>
     <string name="cartitem_qty_label">Qty</string>
