updating ConfiguratorFragment to not make configurator api call updating MainActivity to exit rather than load ConfiguratorFragment if configurator api call fails adding code to ensure active session now checking for network connectivity before attempting configurator api call making ApiError.getApiError public, also adding httpStatusCode for convenience

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,4 +164,9 @@
     <string name="searching">Searching…</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!--errors-->
+    <string name="error_network_connectivity">Network connectivity is required. Please enable and try again.</string>
+    <string name="error_server_connection">Unable to contact server at this time. Please try again later.</string>
+    <string name="error_redirect">Please sign in to guest network and then try again.</string>
+
 </resources>
