--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="store_info_title">Store Info</string>
     <string name="tobedone_title">(To be done)</string>
     <string name="search_title">Search</string>
-    <string name="search_hint">Search a product</string>
+    <string name="search_hint">Search</string>
     <string name="empty">Nothing Found</string>
     <string name="password_forgot">Forgot your password?</string>
 
@@ -150,16 +150,16 @@
     <string name="would_you">Would you recommend this to a friend?</string>
     <string name="item">Item</string>
     <string name="model">Model</string>
-    <string name="phone">Phone</string>
-    <string name="store_hours">Store Hours</string>
-    <string name="store_features">Store Features</string>
-
 
     <plurals name="cart_qty">
         <item quantity="one">1 item</item>
         <item quantity="other">%d items</item>
     </plurals>
 
+    <string name="save_btn">Save</string>
+    <string name="cancel_btn">Cancel</string>
+    <string name="original_hint">Search</string>
     <string name="searching">Searching…</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
