--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,9 @@
     <string name="question_mark">\?</string>
     <string name="redeem">Your redeemable</string>
     <string name="reward">Reward!</string>
+    <string name="store_open">Open</string>
+    <string name="store_close">Close</string>
+
 
     <string name="add">ADD</string>
     <string name="cartitem_qty_label">Qty</string>
