* replacing some toasts with error dialog * waiting to load configurator fragment until profile info available (in case of persistent login) * displaying dialog prompt when network unavailable * fixing some NPE issues * handling redirection error with dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,7 +167,10 @@
 
     <string name="save_btn">Save</string>
     <string name="cancel_btn">Cancel</string>
+    <string name="okay_btn">OK</string>
     <string name="searching">Searching…</string>
+
+    <string name="network_settings">NETWORK SETTINGS</string>
 
     <!--errors-->
     <string name="error_network_connectivity">Network connectivity is required. Please enable and try again.</string>
