Using channel api to get correct nearby store location and office hour

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,6 +156,7 @@
     <string name="item">Item</string>
     <string name="model">Model</string>
     <string name="phone">Phone</string>
+    <string name="store_nearby">Store nearby you</string>
     <string name="store_hours">Store Hours</string>
     <string name="store_features">Store Features</string>
     <string name="store_closed">Closed</string>
