--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,6 +136,8 @@
     <string name="order_confirmation_with_error">An error occurred, but your order appears to have gone through."</string>
     <string name="password_reset">Reset Password</string>
     <string name="continue_shopping">Continue Shopping</string>
+    <string name="sku_set_message"><u>Select product options</u></string>
+    <string name="sku_title">Select items</string>
 
 
     <!--profile-->
@@ -205,4 +207,8 @@
     <string name="error_server_connection">Unable to contact server at this time. Please try again later.</string>
     <string name="error_redirect">Please sign in to guest network and then try again.</string>
     <string name="error_no_location_service">Can\'t find nearby stores because location service is not available.</string>
+
+    <string-array name="skuset_detail">
+        <item>Select product options</item>
+    </string-array>
 </resources>
