--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="payment_method">Payment Method</string>
     <string name="payment_method_required">Payment Method is required</string>
     <string name="billing_address_required">Billing address is required</string>
+    <string name="required_fields">Please fill in required fields</string>
     <string name="billing_addr">Billing Address</string>
     <string name="use_as_billing_addr">Use above as billing address</string>
     <string name="item_subtotal">Item total</string>
