rearranging apartment field

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,7 +126,7 @@
 	<string name="phone_label">Phone</string>
 	<string name="shipto_address_label">Ship-to Address</string>
 	<string name="address_label">Address</string>
-	<string name="apartment_label">Apt/Suite/Bldg Number</string>
+	<string name="apartment_label">Apt/Suite</string>
 	<string name="city_label">City</string>
 	<string name="state_label">State</string>
 	<string name="zip_code_label">Zip Code</string>
