--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="account_title">Account</string>
     <string name="login_title">Sign In</string>
     <string name="signout_title">Sign Out</string>
+    <string name="create_account_title">Create Account</string>
     <string name="rewards_title">Staples Rewards</string>
     <string name="link_rewards_title">Link Rewards Account</string>
     <string name="order_title">Orders</string>
