--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="empty">Nothing Found</string>
     <string name="password_forgot">Forgot your password?</string>
 
+    <string name="sku_notification_title">Notification</string>
+
     <!-- Personal Feed -->
     <string name="loading">Loading...</string>
     <string name="feed_clearance_title">Cart Items On Clearance</string>
