--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,9 @@
     <string name="empty">Nothing Found</string>
     <string name="password_forgot">Forgot your password?</string>
 
+    <!-- Notifications -->
     <string name="sku_notification_title">Notification</string>
+    <string name="notification_header">Staples</string>
 
     <!-- Personal Feed -->
     <string name="loading">Loading...</string>
