--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,9 @@
     <string name="password_forgot">Forgot your password?</string>
 
     <!-- Notifications -->
+    <string name="notify_prefs_title">Notification Preferences</string>
+    <string name="alias_text">Alias:</string>
+    <string name="set_alias">Set</string>
     <string name="sku_notification_title">Notification</string>
     <string name="notification_header">Staples</string>
 
