--- a/app/src/dev/res/values/strings.xml
+++ b/app/src/dev/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Kendall (Dev)</string>
-    <string name="configuration_destination">http://204.232.161.159/</string>
+    <!--
+    <string name="configuration_destination">http://10.29.172.207:3030/chapi/android/tag/CFA/dev/latest</string>
+
+    -->
+    <string name="configuration_destination">http://minternal-preprod.staples.com/mobileServices/chapi/android/tag/CFA/dev/latest</string>
+
 </resources>
