--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,6 +175,7 @@
     <string name="check_exp_date">Check expiration date</string>
     <string name="cc_encryption_failure">Credit card encryption failed</string>
     <string name="all_fields_required">All fields are required. Please fill and try again</string>
+    <string name="card_ending_in">Card ending in</string>
 
     <string name="description">Description</string>
     <string name="specifications">Specifications</string>
