--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,8 +176,12 @@
     <string name="cc_encryption_failure">Credit card encryption failed</string>
     <string name="all_fields_required">All fields are required. Please fill and try again</string>
     <string name="card_ending_in">Card ending in</string>
+
+    <!-- Orders -->
     <string name="no_orders_found">No Orders Found</string>
     <string name="estimated_delivery">Estimated Delivery</string>
+    <string name="tracking_number">Tracking Number</string>
+    <string name="carrier">Carrier</string>
 
     <string name="description">Description</string>
     <string name="specifications">Specifications</string>
