a little strings cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,6 @@
     <string name="add_address_title">New Address</string>
     <string name="edit_address_title">Update Address</string>
     <string name="edit_credit_card_title">Update Credit Card</string>
-    <string name="email_title">Email</string>
-    <string name="username_title">User name</string>
     <string name="cart_title">Cart</string>
     <string name="checkout_title">Checkout</string>
     <string name="guest_checkout_title">Guest Checkout</string>
@@ -37,7 +35,6 @@
     <string name="search_title">Search</string>
     <string name="search_hint">Search a product</string>
     <string name="empty">Nothing Found</string>
-    <string name="password_forgot">Forgot your password?</string>
 
     <!-- Notifications -->
     <string name="notify_prefs_title">Notification Preferences</string>
@@ -160,7 +157,10 @@
     <string name="sku_title">Select items</string>
 
     <!--profile-->
+    <string name="username_label">User name</string>
+    <string name="username">UserName</string>
     <string name="password">Password</string>
+    <string name="password_forgot">Forgot your password?</string>
     <string name="email">Email</string>
     <string name="reenter_email">Re-enter Email</string>
     <string name="email_mismatch">Email address must match</string>
