--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,6 +220,10 @@
     <string name="store_no_phone">Sorry, this device has no phone application.</string>
     <string name="store_no_maps">Sorry, this device has no map application.</string>
 
+    <!--weekly ad-->
+    <string name="change_store">change store</string>
+
+
     <string name="show">SHOW</string>
     <string name="hide">HIDE</string>
     <string name="cancel">CANCEL</string>
