story for extension for LocationFinder when location service is turned off.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="store_open">Open</string>
     <string name="store_close">Close</string>
     <string name="no_store">No Nearby Store</string>
+    <string name="find_store">Find Nearby Store</string>
 
     <!--cart, coupon/reward, checkout -->
     <string name="add">ADD</string>
