add shipping resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,12 @@
     <string name="store_close">Close</string>
     <string name="no_store">Find A Store Near You</string>
 
+    <!--Shipping Logic-->
+    <string name="overweight">OVERSIZED</string>
+    <string name="add_on">$25 MINIMUM</string>
+    <string name="overweight_warming">Additional shipping fees apply</string>
+    <string name="add_on_warming">$25 minimum in your order to ship</string>
+
     <!--cart, coupon/reward, checkout -->
     <string name="add">ADD</string>
     <string name="cartitem_qty_label">Qty</string>
