--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,9 +72,10 @@
     <!--Shipping Logic-->
     <string name="overweight">OVERSIZED</string>
 	<string name="oversized_shipping_fee">Oversized shipping fee</string>
-	<string name="add_on">$15 MINIMUM</string>
+	<string name="minimum_all_caps">MINIMUM</string>
+	<string name="add_on">$25 MINIMUM</string>
     <string name="overweight_warming">Additional shipping fees apply</string>
-	<string name="add_on_warming">$15 minimum in your order to ship</string>
+	<string name="add_on_warming">$25 minimum in your order to ship</string>
 
     <!--cart, coupon/reward, checkout -->
     <string name="add">ADD</string>
