--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,6 +189,7 @@
     <string name="cc_updated">Credit card updated</string>
     <string name="cc_deleted">Credit card deleted</string>
     <string name="check_exp_date">Check expiration date</string>
+    <string name="cc_number_unrecognized">Credit card number not recognized</string>
     <string name="cc_encryption_failure">Credit card encryption failed</string>
     <string name="all_fields_required">All fields are required. Please fill and try again</string>
     <string name="card_ending_in">Card ending in</string>
