--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="notify_prefs_title">Notification Preferences</string>
     <string name="alias_text">Alias:</string>
     <string name="set_alias">Set</string>
+    <string name="notification_title">Notifications</string>
+    <string name="notification_hint">Be in the know. Turn on notifications to receive timely updates on this device.</string>
     <string name="sku_notification_title">Notification</string>
     <string name="notification_header">Staples</string>
 
