--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,6 +193,7 @@
     <string name="all_fields_required">All fields are required. Please fill and try again</string>
     <string name="card_ending_in">Card ending in</string>
     <string name="shipping_billing_text">Shipping/Billing</string>
+    <string name="login_error_msg">The specified user name or password is not correct. Verify the information provided and log in again.</string>
 
     <!-- Orders -->
     <string name="order">Order</string>
