--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,12 +59,9 @@
     <string name="loading">Loading...</string>
     <string name="feed_clearance_title">Cart Items On Clearance</string>
     <string name="feed_daily_deal_title">Cart Items On Daily Deal</string>
-    <string name="feed_seen_products_title">&#8226; Your recently viewed items</string>
+    <string name="feed_seen_products_title">Your Recently Viewed Items</string>
     <string name="feed_empty_message">Your Personal Feed is Empty</string>
-    <string name="feed_empty_interact_message">Interact with the app to view</string>
-    <string name="feed_empty_clearence">&#8226; Cart items on clearance</string>
-    <string name="feed_empty_sale">&#8226; Cart items on sale</string>
-
+    <string name="feed_empty_interact_message">Explore and come back to find suggestions, deals and more.</string>
 
     <!-- Personalized Message -->
     <string name="welcome">Welcome</string>
