--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,6 +184,7 @@
     <string name="username_password_required">Username and Password are required</string>
     <string name="address_deleted">Address deleted</string>
     <string name="address_updated">Address updated</string>
+    <string name="cc_added">Credit card added</string>
     <string name="cc_updated">Credit card updated</string>
     <string name="cc_deleted">Credit card deleted</string>
     <string name="check_exp_date">Check expiration date</string>
