--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="item_subtotal">Subtotal (including coupons)</string>
     <string name="coupons_rewards">Coupons &amp; Rewards</string>
     <string name="coupon_code_hint">Add Coupon Code here</string>
+    <string name="missing_coupon_code">Please enter a coupon code</string>
     <string name="redeemable_rewards">Redeemable Rewards</string>
     <string name="no_redeemable_rewards">No Redeemable Rewards</string>
     <string name="link_rewards_account">Link Your Rewards Account</string>
