--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Kendall</string>
+    <string name="app_name">Staples</string>
     <string name="staples">Staples</string>
 
     <!-- Fragment titles -->
