added checksum for credit card added validation to card expiration date prior to the call to api added validation to address so that we display manual input if address not recognized, added validation to address field

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,9 +191,11 @@
     <string name="cc_number_unrecognized">Credit card number not recognized</string>
     <string name="cc_encryption_failure">Credit card encryption failed</string>
     <string name="all_fields_required">All fields are required. Please fill and try again</string>
+    <string name="checksum_validation">Credit card number invalid</string>
     <string name="card_ending_in">Card ending in</string>
     <string name="shipping_billing_text">Shipping/Billing</string>
     <string name="login_error_msg">The specified user name or password is not correct. Verify the information provided and log in again.</string>
+    <string name="address_error_msg">Please enter a valid address</string>
 
     <!-- Orders -->
     <string name="order">Order</string>
