--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,7 +89,6 @@
     <string name="pretax_subtotal">Pre-tax subtotal</string>
     <string name="tax">Tax</string>
     <string name="proceed_to_checkout">Secure Checkout</string>
-    <string name="no_reviews">no reviews</string>
     <string name="shipping_addr">Shipping Address</string>
     <string name="payment_method">Payment Method</string>
     <string name="payment_method_required">Payment Method is required</string>
@@ -222,6 +221,8 @@
     <string name="author_prefix">By</string>
     <string name="rebate">Rebate</string>
     <string name="rebate_hint">* Price before rebate</string>
+    <string name="stars_no_reviews">no reviews</string>
+    <string name="details_no_reviews">No Reviews</string>
 
     <!--Shipping Logic-->
     <string name="overweight">OVERSIZED</string>
