--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="sort_title_ascending">Name A–Z</string>
     <string name="sort_title_descending">Name Z–A</string>
     <string name="rebate_text">*Price before rebate</string>
+    <string name="expired_notice">This promotion has expired.\n\nCheck out some of our other great offers\nor search for whatever you may need.</string>
+    <string name="expired_ok">Ok</string>
 
     <!-- Notifications -->
     <string name="notify_prefs_title">Notification Preferences</string>
