--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="reward">Reward!</string>
     <string name="store_open">Open</string>
     <string name="store_close">Close</string>
-    <string name="no_store">Find A Store Near You</string>
+    <string name="no_store">Find a store</string>
 
     <!--cart, coupon/reward, checkout -->
     <string name="add">ADD</string>
