Added in no search results found message.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,9 @@
     <string name="sort_title_descending">Name Z–A</string>
     <string name="rebate_text">*Price before rebate</string>
     <string name="expired_notice">This promotion has expired.\n\nCheck out some of our other great offers or search for whatever you may need.</string>
-    <string name="expired_ok">Ok</string>
+    <string name="expired_ok">OK</string>
+    <string name="search_results_not_found_header">Your search for \"{0}\" \ndid not match any products</string>
+    <string name="search_results_not_found_suggestions">Check spelling\nTry different keywords\nTry more general keywords</string>
 
     <!-- Notifications -->
     <string name="notify_prefs_title">Notification Preferences</string>
