--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="notification_header">Staples</string>
 
     <!-- Personal Feed -->
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
     <string name="feed_clearance_title">Cart Items On Clearance</string>
     <string name="feed_daily_deal_title">Cart Items On Daily Deal</string>
     <string name="feed_seen_products_title">Your Recently Viewed Items</string>
